Wikipedia artist lookup would freeze Amarok if the artist was not found and the locale was not English.

This was because of this nasty detail: QString.endsWidth( "" ) always returns true, not false.

BUG: 142764


svn path=/branches/stable/extragear/multimedia/amarok/; revision=695895